[package]
name = "flexlayout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#fallible-iterator = "0.2.0"
#genawaiter = "0.99.1"

[lib]
name = "flexlayout"
path = "src/lib.rs"

[[example]]
name = "simple"
path = "examples/simple/Cargo.toml"